# ws-django-tagging

./: pyproject.toml
tagging/: apps.py
