[tool.poetry]
name = "ws-django-tagging"
version = "0.5.0.2"
description = "Generic tagging application for Django"
authors = ["Jonathan Buchanan <jonathan.buchanan@gmail.com>"]
homepage = "https://github.com/Fantomas42/django-tagging"
license = "BSD License"


packages = [
    { include = "tagging", from="." },
]

[[tool.poetry.source]]
name = "ws"
url = "https://pypi.wheel-size.com/simple/"

[tool.poetry.dependencies]
python = "^3.8"

django = "^2.2 || ^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
